--- a/post/markdown/2019-9-22-activity1.md
+++ b/post/markdown/2019-9-22-activity1.md
@@ -5,7 +5,7 @@ created_at: "2019-9-22"
 updated_at: --/--/--
 summary: "活動したことをまとめてみました"
 draft: false
-subpath: "activity"
+subpath: "activity1"
 categories: [活動紹介]
 img: ""
 ---
