--- a/post/markdown/2019-9-22-markdown1.md
+++ b/post/markdown/2019-9-22-markdown1.md
@@ -5,7 +5,7 @@ created_at: "2019-9-22"
 updated_at: --/--/--
 summary: "markdown関連のコードをまとめました"
 draft: false
-subpath: "markdown"
+subpath: "markdown1"
 categories: [markdown, プログラミング, 備忘録]
 img: ""
 ---
