update:全ページのレイアウトの見直し及び修正

--- a/post/markdown/2019-9-20_vue1.md
+++ b/post/markdown/2019-9-20_vue1.md
@@ -6,8 +6,8 @@ updated_at: --/--/--
 summary: "vueのデータバインディングなどをまとめました"
 draft: false
 subpath: "vue1"
-categories: [vue, プログラミング, 備忘録]
-img: ""
+categories: [vue]
+tag: [プログラミング, 備忘録]
 ---
 
 ## データバインディング
