--- a/post/markdown/2019-9-22_activity1.md
+++ b/post/markdown/2019-9-22_activity1.md
@@ -6,8 +6,8 @@ updated_at: --/--/--
 summary: "活動したことをまとめてみました"
 draft: false
 subpath: "activity1"
-categories: [活動紹介]
-img: ""
+categories: [none]
+tag: [活動紹介]
 ---
 
 # 自己紹介
