--- a/post/markdown/2019-9-22_markdown1.md
+++ b/post/markdown/2019-9-22_markdown1.md
@@ -6,8 +6,8 @@ updated_at: --/--/--
 summary: "markdown関連のコードをまとめました"
 draft: false
 subpath: "markdown1"
-categories: [markdown, プログラミング, 備忘録]
-img: ""
+categories: [markdown]
+tag: [プログラミング, 備忘録]
 ---
 
 ## 文字修飾
