--- a/post/markdown/2019-9-21_vue2.md
+++ b/post/markdown/2019-9-21_vue2.md
@@ -6,8 +6,8 @@ updated_at: --/--/--
 summary: "vueのライフサイクルフックについてまとめました"
 draft: false
 subpath: "vue2"
-categories: [vue, プログラミング, 備忘録]
-img: ""
+categories: [vue]
+tag: [ プログラミング, 備忘録]
 ---
 
 ## ライフサイクルフック
